Path bar buttons are not discoverable enough
On irc or here in gitlab we get some regular feedback about users not knowing how to create a new folder. The new folder item is right now in the path bar buttons, so that probably means those buttons are not discoverable enough.
I think the causes are three:
- Styling, for not being more similar to buttons
- Position, for not being close to the other buttons
- Arrow disclosure, for not being a common enough pattern (I guess?)
Unfortunately I don't have many ideas how to improve those.
Edited by Carlos Soriano