toolbar: Improve pathbar discoverability

For 3.30 Nautilus implemented a new path bar design that provided a
the view background menu in the path bar labels that was usually
unavailable in list view.

While this is a good step forward, the discoverability of the path bar
buttons was not good, users didn't figure out those are actual buttons
and they can click in them.

This work tries to fix that by buttinizing again the path bar, while
matching better with the new gtk stylesheet.

Changes are the style of the path bar buttons and adding a "New Folder"
to the hamburguer menu.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/issues/734